--- a/my-telko-app/src/index.html
+++ b/my-telko-app/src/index.html
@@ -11,7 +11,7 @@
   <app-root></app-root>
   <nav>
     <ul>
-      <li><a routerLink="guest-intvetation">Guest invation profile</a></li>
+      <li><a routerLink="/guest-intvetation">Guest invation profile</a></li>
       <!-- Add more links here -->
     </ul>
   </nav>
